cabal-version: 2.4
name:          aztecs-transform
version:       0.2.0.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    matt@hunzinger.me
author:        Matt Hunzinger
homepage:      https://github.com/matthunz/aztecs
synopsis:
    A type-safe and friendly Entity-Component-System (ECS) for Haskell

description:
    The Entity-Component-System (ECS) pattern is commonly used in video game develop to represent world objects.
    .
    ECS follows the principal of composition over inheritence. Each type of
    object (e.g. sword, monster, etc), in the game has a unique EntityId. Each
    entity has various Components associated with it (material, weight, damage, etc).
    Systems act on entities which have the required Components.

category:      Game Engine

source-repository head
    type:     git
    location: https://github.com/matthunz/aztecs.git

library
    exposed-modules:  Aztecs.Transform
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.6 && <5,
        aztecs >=0.12 && <0.13,
        aztecs-hierarchy >=0.2 && <0.3,
        containers >=0.6 && <0.9,
        linear >=1,
        mtl >=2 && <3

test-suite aztecs-hierarchy-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.6 && <5,
        aztecs,
        aztecs-hierarchy,
        containers >=0.6,
        hspec >=2,
        QuickCheck >=2
